--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -21,6 +21,10 @@ So!
 
 GLM? 
 
+I am beginning to see through going through different analysis that you cannot have one without the other with regards to good normality and linearity/ homogenity
+So what is preffered: good normality or good linearity/ homogenity? go with glm..? 
+
+
 eggcountinglsglm <- glm(egg_numbers ~ diet, data = long_egg_counting1, family = quasipoisson)
 summary(eggcountinglsglm)
 
@@ -29,7 +33,49 @@ performance::check_model(eggcountinglsglm)
 performance::check_model(eggcountinglsglm, check = c("qq"))
 ```
 normality : lines are not really on the line 
-linerity/homogenity: points arent as close together but the line is not flat 
+linerity/homogenity: points arent as close together but the line is not flat? 
+
+
+Seeing if there are big differences in the summary() function results 
+
+```{r}
+summary(eggcountingls1)
+summary(eggcountinglsglm)
+```
+
+QUESTION!!!
+how to compare values? 
+glm results are in log so..? 
+
+log(54.50)the same
+
+exp(3.99)
+more or less the same?? 
+
+cannot do this for "-" 
+also how do i transform log values back? 
+I remember from the workbook (and looking at the new one again), that it was 
+exp? 
+
+Feeding behaviour analysis: 
+
+Using LM: 
+```{r}
+performance::check_model(exp1alllm)
+performance::check_model(exp1alllm, check = c("qq"))
+```
+normality: points are too close together 
+linerity/homogenity:  gets bad at the end 
+
+Using GLM - day IS just significant, but with quasi: 
+```{r}
+performance::check_model(exp1allglm2)
+performance::check_model(exp1allglm2, check = c("qq"))
+```
+normality : looks awful 
+linerity/homogenity:  looks quite ok 
+
+
 
 
 ### Experiment 2 
@@ -64,8 +110,6 @@ performance::check_model(exp3alllm2)
 ```{r}
 performance::check_model(exp3alllm2, check=c("qq"))
 ```
-
-
 
 ```{r}
 performance::check_model(exp3allglm2)
@@ -161,6 +205,16 @@ performance::check_model(exp3allglm2)
 - Homogenity of variance: looks decent 
 
 
+For feeding behaviour analysis for experiment 3: 
+- after testing proportional and real values: realising there was not much difference 
+- stuck with real values 
+- used lm and glms
+- found with the glm that quasi-poisson would need to be used and to drop day as is not significant
+
+
+
+
+Experiment 3 - 
 OFFSPRING DATA ANALYSIS -- 
 
 Real numbers, offspring alone 
@@ -211,8 +265,9 @@ performance::check_model(exp3offspring_lm3)
 Normality: doesn't look great, few loose points 
 linearity/ homogenity: points are too close together 
 
+
 QUESTION!!
-We discussed that for offspring count, we found that it doesn't matter about doing proportions.
+We discussed that for behavioural/feeding count, we found that it doesn't matter about doing proportions. data much less complex 
 Does this apply here too? 
 
 
