--- a/Data Analysis Notebook.Rmd
+++ b/Data Analysis Notebook.Rmd
@@ -36,6 +36,8 @@ linerity/homogenity: points arent as close together but the line is not flat?
 
 
 Seeing if there are big differences in the summary() function results 
+why are the log values different when transferred to non log 
+glm vs lm -- is that why we do different? 
 
 ```{r}
 summary(eggcountingls1)
