--- a/Experimental Write-up.Rmd
+++ b/Experimental Write-up.Rmd
@@ -10,16 +10,15 @@ knitr::opts_chunk$set(echo = TRUE)
 
 #Data Analysis 
 
-### Mated vs virgin females
+### Mated vs virgin females (experiment 2b)
 
 ## Feeding behaviour 
 A generalised linear model was used with quasipoisson to count for overdispersion. Day was dropped from the model as there was found to be no significant effect of including day in the model (P = 0.32). 
 It was found that there was a strong significant effect in diet choice when comparing mated *drosophila melanogaster* with virgin. When comparing the P:C 8:1 diet to mated and virgin flies, there was a signficant difference found (P = <0.0001), there was a mean average of 2.74 flies on the 8:1 diet per observation while there was a mean average of only 1.64 flies on a patch at an observation for the virgin females. This shows that mated females will prefer a diet which is high in protein, indicating that mated females are sensible enough to chose a diet which is good for pregnancy, contributing to the growth of their offspring. 
 
 ## Oviposition behaviour 
-
-
-
+To test for the significance in oviposition behavaviour in the mated females, a generalised linear model was used with quasipoisson to count for overdispersion. It was found that although there was not a lot of differences, there were significantly more offspring emerging from diets 1:8 than diets 1:2 (P = 0.019) as these diets are both diets which are 'low in protein' it shows that although there is not a lot of preference for any particular diets when mated females are laying their eggs.
+Data for virgin female egg laying was not collected for this experiment. 
 
 
 Experiment 3 
