--- a/Experimental Write-up.Rmd
+++ b/Experimental Write-up.Rmd
@@ -22,24 +22,32 @@ source(here("scripts", "Experiment 3.R"))
 
 # Data Analysis 
 
-## Mated vs Virgin females (Experiment 2b)
+## Mated vs Virgin females (Experiment 2) - Feeding and Oviposition behaviour
 
 ### Feeding behaviour 
+
 A generalised linear model was used with quasipoisson to count for overdispersion. Day was dropped from the model as there was found to be no significant effect of including day in the model (P = 0.32). 
-It was found that there was a strong significant effect in diet choice when comparing mated *drosophila melanogaster* with virgin. When comparing the P:C 8:1 diet to mated and virgin flies, there was a signficant difference found (P = <0.0001), there was a mean average of 2.74 flies on the 8:1 diet per observation while there was a mean average of only 1.64 flies on a patch at an observation for the virgin females. This shows that mated females will prefer a diet which is high in protein, indicating that mated females are sensible enough to chose a diet which is good for pregnancy, contributing to the growth of their offspring. 
+It was found that there was a strong significant effect in diet choice when comparing mated *drosophila melanogaster* with virgin. When comparing the P:C 8:1 diet to mated and virgin flies, there was a signficant difference found (P = <0.0001), there was a mean average of 2.74 flies on the 8:1 diet per observation while there was a mean average of only 1.64 flies on a patch at an observation for the virgin females (Figure 1). This shows that mated females will prefer a diet which is high in protein, indicating that mated females are sensible enough to chose a diet which is good for pregnancy, contributing to the growth of their offspring. 
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
 exp2bmatedall_plot + exp2bvirginall_plot
 ```
-*Figure 1*: ** A boxplot comparing feeding behaviour of mated and virgin females. ** Figure shows a plot with the mean average +/- S.E. of where the mated females preferred to feed (left), compared with a mean average +/- S.E. of where the virgin females preferred to feed (right). 
+*Figure 1*: **A boxplot comparing feeding behaviour of mated and virgin females.** Figure shows a plot with the mean average +/- S.E. of where the mated females preferred to feed (left), compared with a mean average +/- S.E. of where the virgin females preferred to feed (right). 
 
 ### Oviposition behaviour 
-To test for the significance in oviposition behavaviour in the mated females, a generalised linear model was used with quasipoisson to count for overdispersion. It was found that although there was not a lot of differences, there were significantly more offspring emerging from diets 1:8 than diets 1:2 (P = 0.019). Overall there was a mean average of 114 +/- S.E. 22.5 offspring emerging from 1:8 diets and a mean average of 68.9 +/- 10.6 S.E. offspring emerging from the 1:2 diets. 
+To test for the significance in oviposition behavaviour in the mated females, a generalised linear model was used with quasipoisson to count for overdispersion. It was found that although there was not a lot of differences, there were significantly more offspring emerging from diets 1:8 than diets 1:2 (P = 0.019). Overall there was a mean average of 114 +/- S.E. 22.5 offspring emerging from 1:8 diets and a mean average of 68.9 +/- 10.6 S.E. offspring emerging from the 1:2 diets (Figure 2). 
 As these diets are both diets which are 'low in protein' it shows that although there is not a lot of preference for any particular diets when mated females are laying their eggs.
 Data for virgin female egg laying was not collected for this experiment. 
 
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+offspring_ex2b_plot
+```
 
+Data was also collected in a preliminary experiment, where the egg counts of where both virgin females and mated females laid their eggs was collected. It was found that there was no significant differences found in where virgin females laid their eggs and where mated females laid their eggs in this experiment. This experiment also showed however, that there was significantly more eggs laid on the 1:8 diets compared to the 1:2 diets (P = < 0.001), with a mean average of 121 +/-13.7 S.E. eggs laid on 1:8, and a mean average of 40.6 +/- S.E. 14.1 laid on the 1:2 diets. There was also a slight significant difference in eggs laid on the 1:2 diet, and eggs laid on the 8:1 diet (P=0.025), with a mean average of only 4.21 +/- S.E. 1.52 eggs laid on the 8:1 diets. 
 
+```{r echo=FALSE, message=FALSE, warning=FALSE}
+mated_females_e2_eggcount_plot + virgin_female_e2_eggcount_plot
+```
 
 Experiment 3 
 
